# Superpy4munuSSM

./: Makefile  README.md
DDCalc_v2.0.0/: MODIFICATION FOR MULTINEST  Makefile
PyMultiNest-master/: files.txt
higgstools-main/: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .iwyu.imp  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
higgstools-main/cmake/: FindMathematica.cmake
higgstools-main/doc/: API.rst  API_fortran.rst  API_mathematica.rst  Basics.rst  CMakeLists.txt  Datafile.rst  EffC_Refs.rst  FormulaMacros.tex  HiggsBoundsAPI.rst  HiggsPredictionsAPI.rst  HiggsSignalsAPI.rst  MHiggsBoundsAPI.rst  MHiggsPredictionsAPI.rst  MHiggsSignalsAPI.rst  Namespaces.dox  Particles.rst  Processes.rst  alternative_input.rst  conf.py  index.rst
higgstools-main/doc/_static/: .gitignore  listnumbering.css
higgstools-main/doc/examples/: CMakeLists.txt  addingParticles.cpp  addingParticles.py  modificationFactors.py  settingBRs.cpp  settingBRs.py  settingDecayWidths.cpp  settingDecayWidths.py  usingHB.cpp  usingHB.py  usingHS.cpp  usingHS.py
higgstools-main/examples/: .clang-tidy  CMakeLists.txt  HiggsToolsWithHB5Datafiles.py  SM.cpp
higgstools-main/examples/mathematica/: HH_limits.nb  SM.nb  charm_Yukawa.nb  h125_width.nb
higgstools-main/examples/python/: 2HDM.ipynb  HH_limits.ipynb  SLHA.ipynb  SM.ipynb  charged_Higgs_XS.ipynb  charm_Yukawa.ipynb  example.slha  h125_width.ipynb  mass_uncertainties.ipynb
higgstools-main/include/Higgs/: Bounds.hpp  Predictions.hpp  Signals.hpp
higgstools-main/include/Higgs/bounds/: Limit.hpp
higgstools-main/include/Higgs/predictions/: Basics.hpp  Channels.hpp  EffectiveCouplings.hpp  Particle.hpp  Process.hpp  ReferenceModels.hpp
higgstools-main/include/Higgs/signals/: Measurement.hpp
higgstools-main/json/: Acceptances.schema.json  ChainDecayLimit.schema.json  ChainDecayProcess.schema.json  ChannelLimit.schema.json  ChannelProcess.schema.json  ChannelWidthLimit.schema.json  CommonDefs.schema.json  Constraints.schema.json  LikelihoodLimit.schema.json  Limit.schema.json  LimitConditional.schema.json  PairDecayLimit.schema.json  PairDecayProcess.schema.json  PairProductionLimit.schema.json  PairProductionProcess.schema.json
higgstools-main/python/Higgs/: CMakeLists.txt  Higgs.cpp  Higgs.hpp  HiggsBounds.cpp  HiggsPredictions.cpp  HiggsSignals.cpp  __init__.py
higgstools-main/python/Higgs/bounds/: __init__.py
higgstools-main/python/Higgs/predictions/: __init__.py
higgstools-main/python/Higgs/signals/: __init__.py
higgstools-main/python/Higgs/tools/: ExclusionLlh.py  ImplementationUtils.py  Input.py  Inspire.py  LimitValidation.py  MeasurementValidation.py
higgstools-main/src/: CMakeLists.txt
higgstools-main/src/bounds/: Acceptance.cpp  Acceptance.hpp  Bounds.cpp  CMakeLists.txt  Likelihood.cpp  Likelihood.hpp  Limit.cpp
higgstools-main/src/bounds/limits/: BasicLimit.cpp  BasicLimit.hpp  LikelihoodLimit.cpp  LikelihoodLimit.hpp  ProcessLimits.cpp  ProcessLimits.hpp  WidthLimits.cpp  WidthLimits.hpp
higgstools-main/src/predictions/: Basics.cpp  CMakeLists.txt  CalcHgamgam.cpp  CalcHgamgam.hpp  Channels.cpp  Clustering.cpp  Clustering.hpp  Constraints.cpp  Constraints.hpp  EffectiveCouplings.cpp  FormatSupport.cpp  FormatSupport.hpp  Helpers.cpp  Helpers.hpp  JsonSupport.cpp  JsonSupport.hpp  Particle.cpp  ParticleData.cpp  ParticleData.hpp  Predictions.cpp  PredictionsData.cpp  PredictionsData.hpp  Process.cpp  ReferenceModels.cpp  UncertainMass.cpp  UncertainMass.hpp
higgstools-main/src/predictions/data/: HpmTables.cpp  VHTables.cpp  YR4Brs.cpp  YR4Cxns.cpp  bbHTables.cpp  ggHTables.cpp  tHTables.cpp
higgstools-main/src/signals/: CMakeLists.txt  Evaluation.cpp  Evaluation.hpp  JsonSupport.cpp  JsonSupport.hpp  Measurement.cpp  MeasurementImpl.cpp  MeasurementImpl.hpp  Signals.cpp  Uncertainties.cpp  Uncertainties.hpp
higgstools-main/src/signals/Measurements/: RateMeasurement.cpp  RateMeasurement.hpp
higgstools-main/src/utilities/: Algorithm.cpp  Algorithm.hpp  ArithmeticArray.cpp  ArithmeticArray.hpp  CMakeLists.txt  Concepts.cpp  Concepts.hpp  Format.cpp  Format.hpp  Json.cpp  Json.hpp  JsonFwd.cpp  JsonFwd.hpp  LinearInterpolator.cpp  LinearInterpolator.hpp  Logging.cpp  Logging.hpp  RootFinding.cpp  RootFinding.hpp
higgstools-main/tests/: .clang-tidy  CMakeLists.txt
higgstools-main/tests/bounds/: Acceptance.cpp  AppliedLimit.cpp  BasicLimit.cpp  Bounds.cpp  CMakeLists.txt  Likelihood.cpp  LikelihoodLimit.cpp  Limit.cpp  ProcessLimits.cpp  TestLimit.hpp  WidthLimits.cpp
higgstools-main/tests/bounds/testlimits/: ChainDecayLimit.json  ChannelLimit.json  ChannelWidthLimit.json  LikelihoodLimit1d.json  LikelihoodLimit2d.json  LikelihoodLimit3d.json  PairDecayLimit.json  PairProductionLimit.json
higgstools-main/tests/bounds/testlimits/invalid/: AccAndNorm.json  AccAndNorm2.json  InvalidLimitClass.json
higgstools-main/tests/predictions/: Basics.cpp  BsmParticle.cpp  CMakeLists.txt  Channels.cpp  Clustering.cpp  Constraints.cpp  EffectiveCouplings.cpp  Helpers.cpp  JsonSupport.cpp  Particle.cpp  Predictions.cpp  Process.cpp  ReferenceModels.cpp  UncertainMass.cpp
higgstools-main/tests/predictions/data/: VHTables.cpp
higgstools-main/tests/signals/: CMakeLists.txt  Evaluation.cpp  JsonSupport.cpp  Measurement.cpp  RateMeasurement.cpp  Signals.cpp  Uncertainties.cpp
higgstools-main/tests/signals/testmeasurements/: run1comb_as_in_HS2.json  z_duplicate.json
higgstools-main/tests/signals/testmeasurements/invalid/: read_error.json
higgstools-main/tests/utilities/: Algorithm.cpp  ArithmeticArray.cpp  CMakeLists.txt  Json.cpp  LinearInterpolator.cpp  Logging.cpp
higgstools-main/tools/: getYR4Brs.ipynb  getYR4cxns.ipynb  getqqPhiCxns.ipynb  helpers.py  transferHpmCxns.ipynb  transferVHCxns.ipynb  transferggHbbHCxns.ipynb
higgstools-main/wstp/: CMakeLists.txt  MHiggsTools.cpp  MHiggsTools.tmpp
pyMUNUSSM/: Cube.py  Debug.py  InputFile  InputFileParam  Likelihood.py  MNOptions.py  MODIFICATIONS  Priors.py  SuperPy.py  packageinfo.py  run.sh
pyslha-2.1.3/: isawig2slha  setup.py  (+3 more)
(+42 files in other folders)
